--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(codecrafters-shell)
+project(codecrafters-shell C)
 
-file(GLOB_RECURSE SOURCE_FILES src/*.c src/*.h)
+set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
-set(CMAKE_C_STANDARD 23) # Enable the C23 standard
+file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)
 
 add_executable(shell ${SOURCE_FILES})
+
+target_include_directories(shell PRIVATE
+    src
+)
 
 target_link_libraries(shell PRIVATE readline)
