--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,11 @@ set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
-file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)
+file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS
+    src/*.c
+)
+
+list(FILTER SOURCE_FILES EXCLUDE REGEX "/CMakeFiles/")
 
 add_executable(shell ${SOURCE_FILES})
 
